--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "website portfolio",
   "main": "index.js",
   "scripts": {
-    "dev": "tailwindcss -i src/input.css -o src/output.css --watch",
+    "dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "rendiero",
